step-5-expose-another-application-using-traefik/traefik-ingress-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: base-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.rookout-demo.com
    http:
      paths:
      - path: /another
        backend:
          serviceName: another-hello-world-service
          servicePort: 80
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 80
